split image loading process into two distinct parts  - Image elements callbacks per url  - LRU cache of image holders which could be evicted This allows signalling of image reloading